...
    }
    
    @objc func restorePasswordBtnPressed() {
        guard let view = self.view as? RestorePasswordView else {
            return
        }
        let emailTxt = checkField(field: view.emailField, header: "Email is empty", message: "Email cannot be blank.")
        guard let email = emailTxt else { return }
        if !validateEmail(str: email) {
            AlertService.showCancelAlert(header: "Email is invalid", message: "Email is not correct email.", viewController: self)
            return
        }
        self.userService.restorePassword(for: email) { (result, error) in
...
