...
        return restoreBtn;
    }()
    
    private(set) lazy var descriptionLabel: UILabel = {
        let label = UILabel()
        let attributes: [NSAttributedString.Key: Any] = [NSAttributedString.Key.font: UIFont(name: "Avenir-Book", size: 16)!, NSAttributedString.Key.foregroundColor: #colorLiteral(red: 0.8235294118, green: 0.6745098039, blue: 0.8235294118, alpha: 1)]
        label.attributedText = NSAttributedString(string: "Instructions for password recovery will be sent to your email", attributes: attributes)
        label.textAlignment = .center
        label.numberOfLines = 2
        label.preservesSuperviewLayoutMargins = true
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()
...
